--- a/index.html
+++ b/index.html
@@ -7,19 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work in Progress</title>
     <style>
+        @font-face {
+            font-family: 'GothamSSm-Book';
+            src: url('https://db.onlinewebfonts.com/t/3ad5698dd1177785b94e84f04fd1632f.woff2') format('woff2'),
+                 url('https://db.onlinewebfonts.com/t/3ad5698dd1177785b94e84f04fd1632f.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
         html, body {
             height: 100%;
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'GothamSSm-Book', Arial, sans-serif;
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: #202020; /* Light gray background */
+            background-color: #f4f4f4; /* Light gray background */
         }
 
         h1 {
             font-size: 2em;
-            color: #ffffff; /* Dark gray text color */
+            color: #333; /* Dark gray text color */
         }
     </style>
 </head>
