--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         html, body {
             height: 100%;
             margin: 0;
-            font-family: 'GothamSSm-Book', Arial, sans-serif;
+            font-family: 'GothamSSm-Book';
             display: flex;
             align-items: center;
             justify-content: center;
