--- a/404.html
+++ b/404.html
@@ -6,25 +6,34 @@
     <title>404 page</title>
     <style>
         /* CSS code */
+
+        @font-face {
+            font-family: 'GothamSSm-Book';
+            src: url('https://db.onlinewebfonts.com/t/3ad5698dd1177785b94e84f04fd1632f.woff2') format('woff2'),
+                 url('https://db.onlinewebfonts.com/t/3ad5698dd1177785b94e84f04fd1632f.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
         body {
             /* Set the background image */
-            background-image: url('background.jpg');
+            background-image: url('https://raw.githubusercontent.com/realdint/Miners-Haven-Mod/main/Images/mhmwaterfall.png');
             background-size: cover; /* Cover the viewport */
             background-repeat: no-repeat; /* Do not repeat the image */
             background-attachment: fixed; /* Fix the image in the viewport */
             
             /* Styling the text */
-            font-family: Arial, sans-serif; /* Setting a font */
-            color: white; /* Text color */
+            font-family: 'GothamSSm-Book', sans-serif; /* Setting a font */
+            color: wh; /* Text color */
             height: 100vh; /* Force the body to take the full viewport height */
             display: flex; /* Flexbox for centering the text */
-            align-items: center; /* Center vertically */
-            justify-content: center; /* Center horizontally */
+            align-items: top; /* Center vertically */
+            justify-content: left; /* Center horizontally */
         }
 
         h1 {
-            font-size: 3em; /* Font size */
-            background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent black background for better readability */
+            font-size: 4em; /* Font size */
+            background-color: rgba(0, 0, 0, 0); /* Semi-transparent black background for better readability */
             padding: 20px; /* Space around the text */
             border-radius: 10px; /* Rounded corners */
         }
