--- a/404.html
+++ b/404.html
@@ -18,29 +18,35 @@
         body {
             /* Set the background image */
             background-image: url('https://raw.githubusercontent.com/realdint/Miners-Haven-Mod/main/Images/mhmwaterfall.png');
-            background-size: cover; /* Cover the viewport */
-            background-repeat: no-repeat; /* Do not repeat the image */
-            background-attachment: fixed; /* Fix the image in the viewport */
+            background-size: cover; 
+            background-repeat: no-repeat; 
+            background-attachment: fixed;
             
             /* Styling the text */
-            font-family: 'GothamSSm-Book', sans-serif; /* Setting a font */
-            color: wh; /* Text color */
-            height: 100vh; /* Force the body to take the full viewport height */
-            display: flex; /* Flexbox for centering the text */
-            align-items: top; /* Center vertically */
-            justify-content: left; /* Center horizontally */
+            font-family: 'GothamSSm-Book', sans-serif; 
+            color: #1a1a1a;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;  /* Stack items vertically */
+            align-items: center;     /* Center items horizontally */
+            justify-content: center; /* Center items vertically */
+            text-align: center;      /* Center text within the elements */
         }
 
         h1 {
-            font-size: 4em; /* Font size */
-            background-color: rgba(0, 0, 0, 0); /* Semi-transparent black background for better readability */
-            padding: 20px; /* Space around the text */
-            border-radius: 10px; /* Rounded corners */
+            font-size: 8em; 
+            margin: 0;  /* Remove default margin */
         }
+
+        h2 {
+            font-size: 2em;
+            margin-top: 20px;  /* Add space above the text */
+        }
+
     </style>
 </head>
 <body>
-    <!-- Your text goes here -->
-    <h1>404 Page Not Found</h1>
+    <h1>4O4</h1>
+    <h2>Page Not Found</h2>
 </body>
 </html>
