--- a/404.html
+++ b/404.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 page</title>
     <style>
-        /* CSS code */
-
         @font-face {
             font-family: 'GothamSSm-Book';
             src: url('https://db.onlinewebfonts.com/t/3ad5698dd1177785b94e84f04fd1632f.woff2') format('woff2'),
@@ -16,37 +14,56 @@
         }
 
         body {
-            /* Set the background image */
             background-image: url('https://raw.githubusercontent.com/realdint/Miners-Haven-Mod/main/Images/mhmwaterfall.png');
-            background-size: cover; 
+            background-size: cover;
             background-repeat: no-repeat; 
             background-attachment: fixed;
-            
-            /* Styling the text */
-            font-family: 'GothamSSm-Book', sans-serif; 
+
+            font-family: 'GothamSSm-Book', sans-serif;
             color: #1a1a1a;
             height: 100vh;
             display: flex;
-            flex-direction: column;  /* Stack items vertically */
-            align-items: center;     /* Center items horizontally */
-            justify-content: center; /* Center items vertically */
-            text-align: center;      /* Center text within the elements */
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+
+            overflow: hidden;  /* This property will disable scrolling */
         }
 
         h1 {
             font-size: 8em; 
-            margin: 0;  /* Remove default margin */
+            margin: 0;
         }
 
         h2 {
             font-size: 2em;
-            margin-top: 20px;  /* Add space above the text */
+            margin-top: 20px;
+        }
+
+        p {
+            font-size: 1.5em;
+            margin-top: 10px;
         }
 
     </style>
 </head>
 <body>
-    <h1>4O4</h1>
+    <h1>404</h1>
     <h2>Page Not Found</h2>
+    <p id="timeBasedGreeting"></p>
+
+    <script>
+        let currentHour = new Date().getHours();
+        let greetingContainer = document.getElementById('timeBasedGreeting');
+
+        if (currentHour >= 0 && currentHour < 12) {
+            greetingContainer.textContent = "its too early for this";
+        } else if (currentHour >= 12 && currentHour < 18) {
+            greetingContainer.textContent = "Check that the page exists, or that you typed the URL correctly.";
+        } else {
+            greetingContainer.textContent = "its too late for this";
+        }
+    </script>
 </body>
 </html>
