--- a/404.html
+++ b/404.html
@@ -73,7 +73,7 @@
     <p id="timeBasedGreeting"></p>
 
     <!-- New anchor link to homepage added at the bottom -->
-    <a href="/" class="homepage-link">Go to Homepage</a>
+    <a href="/Miners-Haven-Mod/" class="homepage-link">Go to Homepage</a>
 
     <script>
         let currentHour = new Date().getHours();
