--- a/item-wiki.html
+++ b/item-wiki.html
@@ -23,6 +23,6 @@
         <!-- Items will be populated here -->
     </div>
 
-    <script src="https://raw.githubusercontent.com/realdint/Miners-Haven-Mod/main/itemdatafetcher.js"></script>
+    <script src="https://realdint.github.io/Miners-Haven-Mod/itemdatafetcher.js"></script>
 </body>
 </html>
