Update and rename item-wiki.html to wiki.html

--- a/wiki.html
+++ b/wiki.html
@@ -23,6 +23,6 @@
         <!-- Items will be populated here -->
     </div>
 
-    <script src="https://realdint.github.io/Miners-Haven-Mod/itemdatafetcher.js"></script>
+    <script src="itemdatafetcher.js"></script>
 </body>
 </html>
